--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
-    "scripts": 
-    {
+    "scripts": {
+        "build": "npm install",
         "start": "node index.js"
+    },
+    "dependencies": {
+        "compression": "^1.7.4",
+        "express": "^4.17.1",
+        "fs": "0.0.1-security",
+        "path": "^0.12.7",
+        "winston": "^3.2.1",
+        "winston-papertrail": "^1.0.5"
     }
 }
