--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "fs": "0.0.1-security",
         "path": "^0.12.7",
         "winston": "^3.2.1",
-        "winston-papertrail": "^1.0.5"
+        "winston-papertrail": "^1.0.5",
+        "cors" : "^2.8.5"
+
     }
 }
