Add engines version to package.json

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "winston": "^3.2.1",
         "winston-papertrail": "^1.0.5",
         "cors": "^2.8.5"
+    },
+    "engines": {
+        "node": "20.x"
     }
 }
